syntax = "proto3";

import "google/protobuf/timestamp.proto";
package proto;

option go_package = "github.com/Kosodaka/todo-service";

service TodoItem{
  rpc GetTasks(GetTasksRequest) returns (GetTasksResponse);
  rpc UpdateTaskStatus(GetTasksRequest)  returns (UpdateTaskStatusResponse);
  }

message ItemInfo {
  int64    id = 1;
  string   title = 2;
  string  description = 3;
  google.protobuf.Timestamp created_at = 4;
  bool     done =5;
}

message GetTasksRequest {
  ItemInfo id = 1;
}

message GetTasksResponse{
  ItemInfo item = 1;
}
message UpdateTaskStatusResponse {
  int64 id = 1;
  bool done = 2;
}

